fixed game header heading not centered

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,11 @@
     --secondary: 240 9% 13%;
     --secondary-foreground: 220 8% 92%;
 
-    --muted: 186 10% 35%;
-    --muted-foreground: 215.4 16.3% 56.9%;
+    /* --muted: 186 10% 35%;
+    --muted-foreground: 215.4 16.3% 56.9%; */
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
 
     --accent: 183 81% 35%;
     --accent-foreground: 240 9% 13%;
